# Test-task-FastAPI

./: .dev.env  .env  .env-non-dev  .gitignore  .prod.env  .test.env  Dockerfile  README.md  alembic.ini  dev-requirements.txt  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run.py  test_main.http
files/: app.sh
internal/: api.py
package/: auth.py  database.py  schemas.py
src/: alembic.ini  config.py  main.py
src/api/api/: dependencies.py
src/api/auth/: dependencies.py  responses.py  routes.py
src/api/auth/db/: models.py  repository.py
src/api/dependencies/: auth.py  database.py
src/api/employees/: responses.py  routes.py
src/api/employees/db/: models.py  repository.py
src/api/main/: responses.py  routes.py
src/api/responses/: __init__.py  auth.py  employees.py  main.py
src/api/routes/: __init__.py  auth.py  employees.py  main.py
src/database/: dao.py  init.py  managers.py  models.py
src/infrastructure/db/: __init__.py  utils.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/repository/: base.py
src/infrastructure/utils/: auth.py
src/internal/: api.py
src/migrations/: env.py
src/migrations/versions/: 78dd55e9ca17_new.py  ccbcd1a27af6_init_db2.py
src/package/: auth.py  database.py  hasher.py  utils.py
src/schemas/: employee.py  user.py
src/tests/: conftest.py
src/tests/test_api/: conftest.py  test_auth.py  test_employees.py  test_main.py
tests/: conftest.py  test_http.py  test_main.http
tests/test_api/: conftest.py  test_auth.py  test_employees.py  test_main.py
(+7 files in other folders)
