[tool.poetry]
name = "employees"
version = "0.1.0"
description = ""
authors = ["Michael Nightingale <suslanchikmopl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"
asyncpg = "^0.27.0"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
httpx = "^0.24.1"
gunicorn = "^20.1.0"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"


[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
runserver = "main"



[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]
asyncio_mode="auto"


